--- a/src/index.html
+++ b/src/index.html
@@ -25,13 +25,13 @@
     
     <section id="serviços">
         <div id="empresa">
-            <img src="./img/para-empresas.png" alt="para empresas">
+            <img src="../docs/img2/para-empresas.png" alt="para empresas">
             <p>In eleifend sollicitudin erat in gravida.
                 Donec quis odio commodo, blandit turpis a, blandit diam. Nullam at laoreet magna.
             </p>
         </div>
         <div id="vantagens">
-            <img src="./img/vantagens.png" alt="vantagens">
+            <img src="../docs/img2/vantagens.png" alt="vantagens">
             <p>Nulla venenatis magna nec est condimentum mattis.</p>
         </div>
     </section>
