--- a/src/login.html
+++ b/src/login.html
@@ -10,38 +10,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FideOn</title>
+    <title>Login FideOn</title>
 </head>
 <body>
+    
     <nav id="menu">
         <a href="index.html">FideOn</a>
         <ul>
-            <li><a href="#empresa">Para Empresas</a></li>
-            <li><a href="#vantagens">Vatangens</a></li>
-            <li><a href="#sobre">Junte-se</a></li>
+            <li><a href="index.html#empresa">Para Empresas</a></li>
+            <li><a href="index.html#vantagens">Vatangens</a></li>
+            <li><a href="index.html#sobre">Contato</a></li>
             <li><a href="login.html">Login</a></li>
         </ul>
-    </nav>    
-    
-    <section id="serviços">
-        <div id="empresa">
-            <img src="./img/para-empresas.png" alt="para empresas">
-            <p>In eleifend sollicitudin erat in gravida.
-                Donec quis odio commodo, blandit turpis a, blandit diam. Nullam at laoreet magna.
-            </p>
-        </div>
-        <div id="vantagens">
-            <img src="./img/vantagens.png" alt="vantagens">
-            <p>Nulla venenatis magna nec est condimentum mattis.</p>
-        </div>
-    </section>
-    <section id="sobre">
-        <h2>Sobre</h2>
-        <p>Vivamus pretium arcu ante, at ullamcorper risus tempus at.
-            Suspendisse egestas molestie dui eget mattis.</p>
-            <h2>Contato</h2>
-            <p>Tel<br>(31) 9 9999 9999o</p> 
-            <p>Email<br>contato@fideon.com</p>                               
-    </section>
+    </nav>
+
 </body>
 </html>
