palavra com erro
a palavra vantagens estava com as letras do meio trocadas.

--- a/src/login.html
+++ b/src/login.html
@@ -18,7 +18,7 @@
         <a href="index.html">FideOn</a>
         <ul>
             <li><a href="index.html#empresa">Para Empresas</a></li>
-            <li><a href="index.html#vantagens">Vatangens</a></li>
+            <li><a href="index.html#vantagens">Vantagens</a></li>
             <li><a href="index.html#sobre">Contato</a></li>
             <li><a href="login.html">Login</a></li>
         </ul>
