--- a/src/login.html
+++ b/src/login.html
@@ -23,6 +23,16 @@
             <li><a href="login.html">Login</a></li>
         </ul>
     </nav>
+    <section class="area-login">
+            <div class="login">
+                <div>
+                    <img src="">
+                </div>
 
+                <form>
+                    <input type="text" name="nome" placeholder="nome de usuário">
+                </form>
+            </div>
+    </section>
 </body>
 </html>
