--- a/src/login.html
+++ b/src/login.html
@@ -23,6 +23,8 @@
             <li><a href="login.html">Login</a></li>
         </ul>
     </nav>
+    </body>
+    <body>
     <section class="area-login">
             <div class="login">
                 <div>
