--- a/src/login.html
+++ b/src/login.html
@@ -32,7 +32,7 @@
                 </div>
 
                 <form>
-                    <input type="text" name="nome" placeholder="nome de usuário">
+                    <input type="text" name="nome" placeholder="nome de usuário" autofocus>
                 </form>
             </div>
     </section>
