--- a/src/login.html
+++ b/src/login.html
@@ -31,9 +31,12 @@
                     <img src="">
                 </div>
 
-                <form>
+                <form method="POST">
                     <input type="text" name="nome" placeholder="nome de usuário" autofocus>
+                    <input type="password" name="senha" placeholder="sua senha">
+                    <input type="submit" value="entrar">
                 </form>
+                <p>Não é usuário?<a href="#">Criar Conta</a></p>
             </div>
     </section>
 </body>
