--- a/src/login.html
+++ b/src/login.html
@@ -32,11 +32,11 @@
                 </div>
 
                 <form method="POST">
-                    <input type="text" name="nome" placeholder="nome de usuário" autofocus>
-                    <input type="password" name="senha" placeholder="sua senha">
+                    <input type="text" name="nome" placeholder="Nome de usuário" autofocus>
+                    <input type="password" name="senha" placeholder="Sua senha">
                     <input type="submit" value="entrar">
                 </form>
-                <p>Não é usuário?<a href="#">Criar Conta</a></p>
+                <p>Não é Usuário?<a href="#">Criar Conta</a></p>
             </div>
     </section>
 </body>
