--- a/src/login.html
+++ b/src/login.html
@@ -28,9 +28,8 @@
     <section class="area-login">
             <div class="login">
                 <div>
-                    <img src="">
+                    <h1>Login Empresa</h1>
                 </div>
-
                 <form method="POST">
                     <input type="text" name="nome" placeholder="Nome de usuário" autofocus>
                     <input type="password" name="senha" placeholder="Sua senha">
