--- a/src/login.html
+++ b/src/login.html
@@ -28,7 +28,7 @@
     <section class="area-login">
             <div class="login">
                 <div>
-                    <h1>Login Empresa</h1>
+                    <h1>Login</h1>
                 </div>
                 <form method="POST">
                     <input type="text" name="nome" placeholder="Nome de usuário" autofocus>
