texto para empresas

--- a/src/index.html
+++ b/src/index.html
@@ -62,8 +62,10 @@
 
         <div id="empresa">
             <img src="./img/para-empresas.png" alt="para empresas">
-            <p>In eleifend sollicitudin erat in gravida.
-                Donec quis odio commodo, blandit turpis a, blandit diam. Nullam at laoreet magna.
+            <p>Uma nova forma de gerar benefícios para seus clientes. <br> Controle de beneficios gerados, 
+                categorização de clientes, uma forma mais rápida de se conectar a ele.<br>
+                e muito mais...<br>
+                Solicite sua demonstração e orçamento.
             </p>
         </div>
         
