texto para empresas

--- a/src/index.html
+++ b/src/index.html
@@ -62,9 +62,9 @@
 
         <div id="empresa">
             <img src="./img/para-empresas.png" alt="para empresas">
-            <p>Uma nova forma de gerar benefícios para seus clientes. <br> Controle de beneficios gerados, 
-                categorização de clientes, uma forma mais rápida de se conectar a ele.<br>
-                e muito mais...<br>
+            <p>Um nova maneira de fidelizar clientes. <br><br> Controle de beneficios gerados, 
+                categorização de clientes, uma forma mais rápida de se conectar a ele.<br><br>
+                e muito mais...<br><br>
                 Solicite sua demonstração e orçamento.
             </p>
         </div>
