--- a/src/index.html
+++ b/src/index.html
@@ -71,7 +71,9 @@
         
         <div id="vantagens">
             <img src="./img/vantagens.png" alt="vantagens">
-            <p>Nulla venenatis magna nec est condimentum mattis.</p>
+            <p>Uma gestão melhor dos benefícios para você e seu cliente<br><br>
+                Sistema de pontos com mais controle<br><br>
+                Menos chances de deixar vencer um benefício adquirido.</p>
         </div>
 
         <div class="mapsAPI">
