--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
             <li><a href="#empresa">Para Empresas</a></li>
             <li><a href="#vantagens">Vatangens</a></li>
             <li><a href="#sobre">Sobre</a></li>
-            <li><a href="#mapsAPI">Veja no mapa</a></li>
+            <li><a href="#map">Veja no mapa</a></li>
             <div id="center">
                 <button id="show-login">Login</button>
             </div>    
