--- a/src/indexform.html
+++ b/src/indexform.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/normalize.css">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/styleform.css">
     <title>Formulário de Cadastro</title>
 </head>
 <body>
@@ -17,10 +17,10 @@
 			<form action="#">
 				<div class="form-header">
 					<div class="title">
-						<h1>cadastre-se</h1>
+						<h1>Cadastre-se</h1>
 					</div>
-					<div class="login-buttom">
-						<buttom><a href="#">Entrar</a></buttom>
+					<div class="login-button">
+						<button><a href="#">Entrar</a></button>
 					</div>
 				</div>
 				<div class="input-group">
