--- a/src/menulateral.html
+++ b/src/menulateral.html
@@ -17,7 +17,7 @@
         <a href="#">Contato</a>
     </aside>
 
-    <section id="principal"> <!--todo conteudo da página vira dentro deste container-->
+    <section id="principal"> <!--todo conteudo da página virá dentro deste container-->
         <span style="font-size:30px;cursor:pointer" onclick="abrirNav()">&#9776
         </span> <!--o &#9776 são as 3 barrinhas do menu-->
         <p>FideOn</p>
