--- a/src/indexform.html
+++ b/src/indexform.html
@@ -8,13 +8,13 @@
     <title>Formulário de Cadastro</title>
 </head>
 <body>
-    <div class="container">
-		<div class="form-image">
-			<img src="#">
+    <div class="container"> <!--bloco de quadrado. Imagem e formulario em si-->
+		<div class="form-image"><!--quadrado da imagem-->
+			<img src="./img/undraw_forms_re_pkrt.svg">
 		</div>
-		<div class="form">
+		<div class="form"> <!--quadrado do formulario-->
 			<form action="#">
-				<div class="form-header">
+				<div class="form-header"><!--cabeçalho do formulario-->
 					<div class="title">
 						<h1>Cadastre-se</h1>
 					</div>
@@ -22,39 +22,39 @@
 						<button><a href="#">Entrar</a></button>
 					</div>
 				</div>
-				<div class="input-group">
-					<div class="input-box">
+				<div class="input-group"> <!--grupo de entradas-->
+					<div class="input-box"> <!--primeira entrada - Nome-->
 						<label for="firstname">Primeiro nome</label>
 						<input id="firstname" type="text" name="firstname" placeholder="Digite seu primeiro nome" required>
 					</div>
 
-					<div class="input-box">
+					<div class="input-box"> <!--segunda entrada - Sobrenome-->
 						<label for="lastname">Sobrenome</label>
 						<input id="lastname" type="text" name="lastname" placeholder="Digite seu sobrenome nome" required>
 					</div>
                     
-                    <div class="input-box">
+                    <div class="input-box"> <!--terceira entrada - E-mail-->
 						<label for="email">Email</label>
 						<input id="email" type="email" name="email" placeholder="Digite seu email" required>
 					</div>
 
-                    <div class="input-box">
+                    <div class="input-box"> <!--quarta entrada - Celular-->
 						<label for="number">Celular</label>
-						<input id="number" type="tel" name="number" placeholder="(xx) xxxxx-xxxx)" required>
+						<input id="number" type="tel" name="number" placeholder="(xx) xxxxx-xxxx" required>
 					</div>
 
-                    <div class="input-box">
+                    <div class="input-box"> <!--quinta entrada - Senha-->
 						<label for="password">Senha</label>
 						<input id="password" type="password" name="password" placeholder="Digite sua senha" required>
 					</div>
 
-                    <div class="input-box">
+                    <div class="input-box"> <!--sexta entrada - Confirmação de senha-->
 						<label for="password">Confirme sua Senha</label>
 						<input id="password" type="password" name="confirmpassword" placeholder="Confirme sua senha" required>
 					</div>
 				</div>
 
-                <div class="gender-inputs">
+                <div class="gender-inputs"> <!--parte da relação de generos-->
                     <div class="gender-title">
                         <h6>Gênero</h6>
                     </div>
@@ -81,6 +81,10 @@
                         </div>
                     </div>
                 </div>
+
+				<div class="continue-button"> <!--parte do botão continuar-->
+					<button><a href="#">Continuar</a></button>
+				</div>
 			</form>
 		</div>
 	</div>
