--- a/src/indexform.html
+++ b/src/indexform.html
@@ -30,7 +30,7 @@
 
 					<div class="input-box"> <!--segunda entrada - Sobrenome-->
 						<label for="lastname">Sobrenome</label>
-						<input id="lastname" type="text" name="lastname" placeholder="Digite seu sobrenome nome" required>
+						<input id="lastname" type="text" name="lastname" placeholder="Digite seu sobrenome" required>
 					</div>
                     
                     <div class="input-box"> <!--terceira entrada - E-mail-->
