--- a/src/menulateral.html
+++ b/src/menulateral.html
@@ -18,11 +18,11 @@
     </aside>
 
     <section id="principal"> <!--todo conteudo da página virá dentro deste container-->
-        <span style="font-size:30px;cursor:pointer" onclick="abrirNav()">&#9776
+        <span style="font-size:30px;cursor:pointer" onclick="abrirNav()">&#9776;
         </span> <!--o &#9776 são as 3 barrinhas do menu-->
         <p>FideOn</p>
     </section>
 
-    <script type="text/javascript" js="scriptmenulateral.js"></script>
+    <script type="text/javascript" src="scriptmenulateral.js"></script>
 </body>
 </html>
