lista menu lateral

--- a/src/menulateral.html
+++ b/src/menulateral.html
@@ -11,10 +11,12 @@
     
     <aside id="menuOculto" class="menuOculto"> <!--poderia ser nav-->
         <a href="javascript:void(0)" class="btnFechar" onclick="fecharNav()">&times;</a> <!--esse é o icone x do menu-->
-        <a href="#">Sobre</a>
-        <a href="#">Cursos</a>
-        <a href="#">Endereços</a>
-        <a href="#">Contato</a>
+        <a href="#">Inicio</a>
+        <a href="#">Clientes</a>
+        <a href="#">Ferramentas</a>
+        <a href="#">Cad. Produtos</a>
+        <a href="#">Relatórios</a>
+        <a href="#">Atendimento</a>
     </aside>
 
     <section id="principal"> <!--todo conteudo da página virá dentro deste container-->
