--- a/src/menulateral.html
+++ b/src/menulateral.html
@@ -10,17 +10,32 @@
 <body>
     
     <nav id="menuOculto" class="menuOculto"> <!--poderia ser aside-->
+        <div class="titulo">FideOn</div>
         <ul>
         <a href="javascript:void(0)" class="btnFechar" onclick="fecharNav()">&times;</a> <!--esse é o icone x do menu-->
         <li><a href="#">Inicio</a></li>
         <li><a href="#">Clientes</a>
             <ul>
              <li><a href="#">Cadastro</a></li>
+             <li><a href="#">Perfil</a></li>
+             <li><a href="#">Comentários</a></li>
             </ul>
         </li>
-        <li><a href="#">Ferramentas</a></li>
+        <li><a href="#">Ferramentas</a>
+            <ul>
+             <li><a href="#">Cartão Fidelidade</a></li>
+             <li><a href="#">CashBack</a></li>
+             <li><a href="#">Categorização</a></li>
+             <li><a href="#">Comunicação</a></li>
+            </ul>
+        </li>
         <li><a href="#">Cad. Produtos</a></li>
         <li><a href="#">Relatórios</a></li>
+            <ul>
+             <li><a href="#">Vendas</a></li>
+             <li><a href="#">Ferramentas</a></li>
+             <li><a href="#">FeedBacks</a></li>
+           </ul>
         <li><a href="#">Atendimento</a></li>
         </ul>
     </nav>
