--- a/src/menulateral.html
+++ b/src/menulateral.html
@@ -14,15 +14,15 @@
         <ul>
         <a href="javascript:void(0)" class="btnFechar" onclick="fecharNav()">&times;</a> <!--esse é o icone x do menu-->
         <li><a href="#">Inicio</a></li>
-        <li><a href="#">Clientes</a>
-            <ul>
+        <li><a href="#" class="submenus">Clientes</a>
+            <ul class="itenssubmenu">
              <li><a href="#">Cadastro</a></li>
              <li><a href="#">Perfil</a></li>
              <li><a href="#">Comentários</a></li>
             </ul>
         </li>
-        <li><a href="#">Ferramentas</a>
-            <ul>
+        <li><a href="#" class="submenus">Ferramentas</a>
+            <ul class="itenssubmenu">
              <li><a href="#">Cartão Fidelidade</a></li>
              <li><a href="#">CashBack</a></li>
              <li><a href="#">Categorização</a></li>
@@ -30,8 +30,8 @@
             </ul>
         </li>
         <li><a href="#">Cad. Produtos</a></li>
-        <li><a href="#">Relatórios</a></li>
-            <ul>
+        <li><a href="#" class="submenus">Relatórios</a></li>
+            <ul class="itenssubmenu" >
              <li><a href="#">Vendas</a></li>
              <li><a href="#">Ferramentas</a></li>
              <li><a href="#">FeedBacks</a></li>
