--- a/src/menulateral.html
+++ b/src/menulateral.html
@@ -46,6 +46,6 @@
         <p>FideOn</p>
     </section>
 
-    <script type="text/javascript" src="scriptmenulateral.js"></script>
+    <script type="text/javascript" src="js/scriptmenulateral.js"></script>
 </body>
 </html>
