troca nome pastas usuario

--- a/src/usuarioempresa.html
+++ b/src/usuarioempresa.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/menulateral.css">
-    <title>Menu Lateral</title>
+    <link rel="stylesheet" href="./css/paginausuario.css">
+    <title>Usuario Empresa</title>
 </head>
 <body>
     
@@ -46,6 +46,6 @@
         <p>FideOn</p>
     </section>
 
-    <script type="text/javascript" src="js/scriptmenulateral.js"></script>
+    <script type="text/javascript" src="js/paginausuario.js"></script>
 </body>
 </html>
