--- a/src/index.html
+++ b/src/index.html
@@ -52,7 +52,7 @@
                     
             <div class="pop-link">
                 <a href="#">Forgot Password?</a>
-                <a href="#">Criar conta</a>
+                <a href="indexform.html">Criar conta</a>
             </div>
         </div>
         
