botao finalizar no form e cpf

--- a/src/indexform.html
+++ b/src/indexform.html
@@ -19,7 +19,7 @@
 						<h1>Cadastre-se</h1>
 					</div>
 					<div class="login-button">
-						<button><a href="#">Entrar</a></button>
+						<button><a href="#">Voltar</a></button>
 					</div>
 				</div>
 				<div class="input-group"> <!--grupo de entradas-->
@@ -32,23 +32,28 @@
 						<label for="lastname">Sobrenome</label>
 						<input id="lastname" type="text" name="lastname" placeholder="Digite seu sobrenome" required>
 					</div>
+
+					<div class="input-box"> <!--terceira entrada - cpf-->
+						<label for="CPF">CPF</label>
+						<input id="CPF" type="text" name="CPF" placeholder="Digite seu CPF" required>
+					</div>
                     
-                    <div class="input-box"> <!--terceira entrada - E-mail-->
+                    <div class="input-box"> <!--quarta entrada - E-mail-->
 						<label for="email">Email</label>
 						<input id="email" type="email" name="email" placeholder="Digite seu email" required>
 					</div>
 
-                    <div class="input-box"> <!--quarta entrada - Celular-->
+                    <div class="input-box"> <!--quinta entrada - Celular-->
 						<label for="number">Celular</label>
 						<input id="number" type="tel" name="number" placeholder="(xx) xxxxx-xxxx" required>
 					</div>
 
-                    <div class="input-box"> <!--quinta entrada - Senha-->
+                    <div class="input-box"> <!--sexta entrada - Senha-->
 						<label for="password">Senha</label>
 						<input id="password" type="password" name="password" placeholder="Digite sua senha" required>
 					</div>
 
-                    <div class="input-box"> <!--sexta entrada - Confirmação de senha-->
+                    <div class="input-box"> <!--setima entrada - Confirmação de senha-->
 						<label for="password">Confirme sua Senha</label>
 						<input id="password" type="password" name="confirmpassword" placeholder="Confirme sua senha" required>
 					</div>
@@ -83,7 +88,7 @@
                 </div>
 
 				<div class="continue-button"> <!--parte do botão continuar-->
-					<button><a href="#">Continuar</a></button>
+					<button><a href="#">Finalizar</a></button>
 				</div>
 			</form>
 		</div>
