--- a/src/indexform.html
+++ b/src/indexform.html
@@ -19,7 +19,7 @@
 						<h1>Cadastre-se</h1>
 					</div>
 					<div class="login-button">
-						<button><a href="#">Voltar</a></button>
+						<button><a href="index.html">Voltar</a></button>
 					</div>
 				</div>
 				<div class="input-group"> <!--grupo de entradas-->
