tamanho letras e margem menu

--- a/src/usuariocliente.html
+++ b/src/usuariocliente.html
@@ -14,24 +14,25 @@
         <ul>
         <a href="javascript:void(0)" class="btnFechar" onclick="fecharNav()">&times;</a> <!--esse é o icone x do menu-->
         <li><a href="#">Inicio</a></li>
-        <li><a href="#" class="submenus">Empresas</a>
-            <ul class="itenssubmenu">
+        <li><a href="#">Empresas</a>
+            <ul>
              <li><a href="#">Onde Encontar?</a></li>
              <li><a href="#">Minhas Empresas</a></li>
             </ul>
         </li>
-        <li><a href="#" class="submenus">Benefícios</a>
-            <ul class="itenssubmenu">
+        <li><a href="#">Benefícios</a>
+            <ul>
              <li><a href="#">Benefícios Adquiridos</a></li>
              <li><a href="#">Benefícios a Vencer</a></li>
              <li><a href="#">Solicitar</a></li>
              <li><a href="#">Compartilhar Benefício</a></li>
             </ul>
         </li>
-        <li><a href="#" class="submenus">Relatórios</a></li>
-            <ul class="itenssubmenu" >
+        <li><a href="#">Relatórios</a>
+           <ul>
              <li><a href="#">Benefícios</a></li>
            </ul>
+        </li>
         <li><a href="#">Comentários</a></li>
         <li><a href="#">Atendimento</a></li>
         </ul>
@@ -43,6 +44,6 @@
         <p>FideOn</p>
     </section>
 
-    <script type="text/javascript" src="js/paginausuario.js"></script>
+    <script type="text/javascript" src="./js/paginausuario.js"></script>
 </body>
 </html>
