nome dos criadores da página

--- a/src/index.html
+++ b/src/index.html
@@ -93,8 +93,9 @@
             <li>Criadores
                 <br>
                 <br>Gustavo Diniz
-                <br>Junia
-                <br>Ana
+                <br>Junia Campos
+                <br>Ana Flávia
+                <br>Kennedy de Oliveira
             </li>
         </ul>  
         
