input data de nascimento

--- a/src/indexform.html
+++ b/src/indexform.html
@@ -37,7 +37,7 @@
 						<label for="CPF">CPF</label>
 						<input id="CPF" type="text" name="CPF" placeholder="Digite seu CPF" required>
 					</div>
-                    
+                  
                     <div class="input-box"> <!--quarta entrada - E-mail-->
 						<label for="email">Email</label>
 						<input id="email" type="email" name="email" placeholder="Digite seu email" required>
@@ -49,14 +49,20 @@
 					</div>
 
                     <div class="input-box"> <!--sexta entrada - Senha-->
+						<label for="date">Data Nascimento</label>
+						<input id="date" type="date" name="date" placeholder="__/__/__" required>
+					</div>
+
+					<div class="input-box"> <!--setima entrada - Senha-->
 						<label for="password">Senha</label>
 						<input id="password" type="password" name="password" placeholder="Digite sua senha" required>
 					</div>
 
-                    <div class="input-box"> <!--setima entrada - Confirmação de senha-->
+                    <div class="input-box"> <!--oitava entrada - Confirmação de senha-->
 						<label for="password">Confirme sua Senha</label>
 						<input id="password" type="password" name="confirmpassword" placeholder="Confirme sua senha" required>
 					</div>
+
 				</div>
 
                 <div class="gender-inputs"> <!--parte da relação de generos-->
@@ -88,7 +94,7 @@
                 </div>
 
 				<div class="continue-button"> <!--parte do botão continuar-->
-					<button><a href="#">Finalizar</a></button>
+					<button><a href="./index.html">Finalizar</a></button>
 				</div>
 			</form>
 		</div>
