--- a/src/index.html
+++ b/src/index.html
@@ -91,14 +91,16 @@
     <nav id="sobre">
         <ul>
             <li>Criadores
-                <br>
                 <br>Gustavo Diniz
                 <br>Junia Campos
                 <br>Ana Flávia
                 <br>Kennedy de Oliveira
             </li>
-        </ul>  
-        
+            <li>Dados para Contato:
+                <br>Email: fideon@contatofideon
+                <br>Telefone: (31) 3329-5025
+            </li>
+        </ul> 
     </nav>
     
     <script type="text/javascript" src="./js/jse.js"></script>
