--- a/src/indexform.html
+++ b/src/indexform.html
@@ -48,7 +48,7 @@
 						<input id="number" type="tel" name="number" placeholder="(xx) xxxxx-xxxx" required>
 					</div>
 
-                    <div class="input-box"> <!--sexta entrada - Senha-->
+                    <div class="input-box"> <!--sexta entrada - data nascimento-->
 						<label for="date">Data Nascimento</label>
 						<input id="date" type="date" name="date" placeholder="__/__/__" required>
 					</div>
@@ -62,7 +62,6 @@
 						<label for="password">Confirme sua Senha</label>
 						<input id="password" type="password" name="confirmpassword" placeholder="Confirme sua senha" required>
 					</div>
-
 				</div>
 
                 <div class="gender-inputs"> <!--parte da relação de generos-->
