nome arquivos js

--- a/src/cadclientes.html
+++ b/src/cadclientes.html
@@ -93,6 +93,6 @@
     <footer>
         
     </footer>
-    <script src="./js/cadclientes.js"></script>
+    <script src="./js/cadastro-clientes.js"></script>
 </body>
 </html>
