--- a/src/cadprodutos.html
+++ b/src/cadprodutos.html
@@ -76,6 +76,6 @@
     <footer>
         
     </footer>
-    <script src="./js/cadprodutos.js"></script>
+    <script src="./js/cadastro-produtos.js"></script>
 </body>
 </html>
