--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,7 @@
             </div>    
                     
             <div class="pop-link">
-                <a href="#">Forgot Password?</a>
+                <a href="recuperação.html">Forgot Password?</a>
                 <a href="indexform.html">Criar conta</a>
             </div>
         </div>
