--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
 	    
         <ul>
             <li><a href="index.html" class="logo">FideOn</a></li>
-            <li><a href="#empresa">Para Empresas xxxxxx</a></li>
+            <li><a href="#empresa">Para Empresas</a></li>
             <li><a href="#vantagens">Vatangens</a></li>
             <li><a href="#cadastro">Cadastro</a></li>
             <li><a href="#sobre">Sobre</a></li>
