--- a/src/index-cliente.html
+++ b/src/index-cliente.html
@@ -8,12 +8,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@1,200&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/normalize.css">
-    <link rel="stylesheet" href="./css/style.css">
-    <script src="./js/app.js"></script>
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
+    <script src="js/app.js"></script>
     <title>Usuário Cliente</title>
 </head>
-<body>
+<body onload="Welcome1()">
+    
     <div class="menu">                    
         <ul>      
             <li><a href="index-cliente.html" class="logo">FideOn</a></li>
@@ -42,7 +43,7 @@
     </div>
 
     <div class="corpo_json">
-        <div id="tela">Bem vindo! Os dados selecionados serão visiveis nesta tela.</div>
+        <div id="tela"></div>
         <div id="tela2"></div>
     </div>
 
