--- a/src/index-empresa.html
+++ b/src/index-empresa.html
@@ -8,9 +8,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@1,200&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/normalize.css">
-    <link rel="stylesheet" href="./css/style.css">
-    <script src="./js/app.js"></script>
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
+    <script src="js/app.js"></script>
     <title>Usuário Empresa</title>
 </head>
 <body>
@@ -48,7 +48,7 @@
     </nav>
 
     <div class="corpo_json">
-        <div id="tela">Bem vindo! Os dados selecionados serão visiveis nesta tela.</div>
+        <div id="tela"></div>
         <div id="tela2"></div>
     </div>
 
