--- a/src/index-empresa.html
+++ b/src/index-empresa.html
@@ -13,7 +13,7 @@
     <script src="js/app.js"></script>
     <title>Usuário Empresa</title>
 </head>
-<body>
+<body onload="Welcome2()">
     
     <nav class="menu">
         <ul>
