--- a/src/index-cliente.html
+++ b/src/index-cliente.html
@@ -10,10 +10,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@1,200&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
-    <script src="js/app.js"></script>
+    
     <title>Usuário Cliente</title>
 </head>
-<body onload="Welcome1()">
+<body onload="Welcome()">
     
     <div class="menu">                    
         <ul>      
@@ -46,6 +46,6 @@
         <div id="tela"></div>
         <div id="tela2"></div>
     </div>
-
+    <script src="js/app.js"></script>
 </body>
 </html>
