--- a/src/index-empresa.html
+++ b/src/index-empresa.html
@@ -10,10 +10,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@1,200&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
-    <script src="js/app.js"></script>
+    
     <title>Usuário Empresa</title>
 </head>
-<body onload="Welcome2()">
+<body onload="Welcome()">
     
     <nav class="menu">
         <ul>
@@ -51,6 +51,6 @@
         <div id="tela"></div>
         <div id="tela2"></div>
     </div>
-
+    <script src="js/app.js"></script>
 </body>
 </html>
