--- a/src/index-empresa.html
+++ b/src/index-empresa.html
@@ -50,6 +50,7 @@
     <div class="corpo_json">
         <div id="tela"></div>
         <div id="tela2"></div>
+        <table id="excelDataTable"></table>
     </div>
     <script src="js/app.js"></script>
 </body>
