--- a/src/index-cliente.html
+++ b/src/index-cliente.html
@@ -13,7 +13,7 @@
     
     <title>Usuário Cliente</title>
 </head>
-<body onload="Welcome()">
+<body onload="WelcomeCliente()">
     
     <div class="menu">                    
         <ul>      
