--- a/src/index-empresa.html
+++ b/src/index-empresa.html
@@ -13,7 +13,7 @@
     
     <title>Usuário Empresa</title>
 </head>
-<body onload="Welcome()">
+<body onload="WelcomeEmpresa()">
     
     <nav class="menu">
         <ul>
