--- a/src/index.html
+++ b/src/index.html
@@ -61,7 +61,7 @@
         <!--BLOCO DE CADASTRO -->        
         <div id="cadastro">
             <div class="img-cadastro">
-                <img src="./img/undraw_forms_re_pkrt.svg">
+                <img src="./img/cadastro.svg">
             </div>
             <form class="dados-cadastro">     
                 <h2>Cadastro</h2>            
